@@ -44,6 +44,11 @@
             <artifactId>javafx-base</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>17.0.2</version>
+        </dependency>
 
         <!-- FontAwesomeFX -->
         <dependency>
@@ -118,6 +123,13 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.15.3</version>
         </dependency>
+
+        <!-- iText PDF -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.3</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -153,10 +165,10 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>Main.Main</mainClass> <!-- Change to tests.MainFX if needed -->
+                    <mainClass>Main.Main</mainClass>
                     <options>
                         <option>--add-modules</option>
-                        <option>javafx.controls,javafx.fxml</option>
+                        <option>javafx.controls,javafx.fxml,javafx.swing</option>
                     </options>
                     <launcher>app</launcher>
                     <jlinkImageName>gradaway-app</jlinkImageName>
@@ -167,6 +179,10 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>Main.Main</mainClass>
+                            <options>
+                                <option>--add-modules</option>
+                                <option>javafx.controls,javafx.fxml,javafx.swing</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
